--- a/WindowFormSimulador/Properties/Resources.resx
+++ b/WindowFormSimulador/Properties/Resources.resx
@@ -117,4 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="green-led-off-hi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagenes\green-led-off-hi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="green-led-on-hi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagenes\green-led-on-hi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
